# echo

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: IOS_COMPANION.md  PRIVACY.md  STRESS_TEST.md  TEST_GUIDE.md  USER_GUIDE.md  index.html  script.js  styles.css
homebrew/: echo.rb
scripts/: field-context.swift  fn-monitor.swift  live-transcribe.swift  setup-whisper.sh  transcribe.swift
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  fn_monitor.rs  lib.rs  main.rs  settings.rs  updater.rs
src-tauri/src/audio/: mod.rs  recorder.rs  sounds.rs
src-tauri/src/codebase/: analyzer.rs
src-tauri/src/context/: app_profiles.rs  dictation.rs  mod.rs  synthesizer.rs  window.rs
src-tauri/src/history/: mod.rs  run_log.rs
src-tauri/src/insertion/: continuation.rs  mod.rs  text_inserter.rs
src-tauri/src/memory/: mod.rs  store.rs  vocabulary.rs
src-tauri/src/providers/: health.rs
src-tauri/src/refinement/: bedrock.rs  claude.rs  cli.rs  gemini.rs  groq.rs  llama.rs  mod.rs  ollama.rs  openai.rs  refiner.rs
src-tauri/src/templates/: store.rs
src-tauri/src/transcription/: deepgram.rs  groq.rs  live.rs  macos.rs  mod.rs  openai_whisper.rs  speech_bias.rs  whisper.rs
src-tauri/src/utils/: errors.rs  logger.rs  mod.rs  sigv4.rs  swift_binary.rs
src-tauri/src/voice/: commands.rs
tests/: appProfiles.test.ts  appState.test.ts  continuation.test.ts  errors.test.ts  (+8 more)
(+59 files in other folders)
